--- a/Ticket_1.tex
+++ b/Ticket_1.tex
@@ -10,7 +10,7 @@
  \insqr{\hat A, \hat B}\ket{n} = 0,
 \end{equation*}
 а следовательно 
-\begin{equation} 
+\begin{equation} \label{eq:1}
  \insqr{\hat A, \hat B} = \hat 0.
 \end{equation} 
 \\
@@ -35,9 +35,18 @@
 Пусть состояне частици описыватся волновой функций $\psi_1$
  и втоже время $\psi_2$ приэтом каждой функции соответственно удовлетворят
  состояния $A_1, \ A_2$ то также эта частица будет описыватся волновой 
- волновой функцией $\psi_3 = c_1 \psi_1 + c_2 \psi_2$ где $c_1, \ c_2 \in 
- \com$ c соответствующим состоянем $A_3$ это сотояние при 
- измерении может принять значения $A_3 = A_1 \lor A_3 = A_2$.
+ волновой функцией $\psi = c_1 \psi_1 + c_2 \psi_2$ где $c_1, \ c_2 \in 
+ \com$ c соответствующим состоянем $A$ это сотояние при 
+ измерении может принять значения $A = A_1 \lor A = A_2$.
+
+Пример частица может находитсяв точке $X_1$ этому полодение соответствует 
+ собственная функция $\psi_1$, но также она модет быть в точке $X_2 - \psi_2$ 
+ Тогда если мыбудем пытаться измерить полодение чатици то мыбудем получать
+ значения $x_1 \lor x_2$, приэтом вероятность: 
+ \begin{equation} 
+  \mathbb{P}(X = x_1) = \braket{\psi}{\psi_1}.
+ \end{equation}
+
  
 
 
