--- a/Ticket_2.tex
+++ b/Ticket_2.tex
@@ -34,7 +34,7 @@ $\hat A $ если выполняется:
 \end{equation} 
 
 \begin{equation} 
-    \hat A^\dag = \hat A.
+    \hat A^\dag \leqslant \hat A.
 \end{equation} 
 
 
