--- a/Ticket_2.tex
+++ b/Ticket_2.tex
@@ -8,7 +8,7 @@
 То-есть оператор переводит Функцию в функцию, для 
 любых двух операторов выполняется свойство асоциативности, 
 но не для любых операторов выполнятся свойство комуативности. 
-Как видно из \ref{eq:1}{уравнениея 1} из комутативности следует 
+Как видно из \ref{eq:1.2}{уравнениея} из комутативности следует 
 одновремнная измеримость.
 \subsubsection{Основное свойство}
 Оператор линеен
@@ -34,7 +34,7 @@ $\hat A $ если выполняется:
 \end{equation} 
 
 \begin{equation} 
-    \hat A^\dag \leqslant \hat A.
+    \hat A^\dag = \hat A.
 \end{equation} 
 
 
